--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,11 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/dist/main.js"
-    }
-  ]
+	"version": 2,
+	"buildCommand": "npm run build",
+	"outputDirectory": "dist",
+	"routes": [
+		{
+			"src": "/(.*)",
+			"dest": "/dist/main.js"
+		}
+	]
 }
