--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,21 @@
 {
 	"version": 2,
-	"buildCommand": "npm run build",
-	"outputDirectory": "dist",
+	"builds": [
+		{
+			"src": "src/main.ts",
+			"use": "@vercel/node"
+		}
+	],
 	"routes": [
 		{
 			"src": "/(.*)",
-			"dest": "/dist/main.js"
+			"dest": "src/main.ts",
+			"methods": [
+				"GET",
+				"POST",
+				"PUT",
+				"DELETE"
+			]
 		}
 	]
 }
