--- a/.github/workflows/main_sanear-status-delivery-back.yml
+++ b/.github/workflows/main_sanear-status-delivery-back.yml
@@ -65,6 +65,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'sanear-status-delivery-back'
-          slot-name: 'Production'
+          slot-name: ''
           package: .
           
