--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+venv/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -129,3 +130,8 @@ dist
 .yarn/install-state.gz
 .pnp.*
 .vercel
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
