--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@fastify/cors": "^9.0.1",
 		"@nestjs/common": "^9.0.0",
 		"@nestjs/config": "^3.2.3",
 		"@nestjs/core": "^9.0.0",
 		"@nestjs/platform-express": "^9.0.0",
+		"@nestjs/platform-fastify": "^9.4.3",
 		"@supabase/supabase-js": "^2.44.4",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.2.0",
