--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"dependencies": {
 		"@fastify/cors": "^9.0.1",
+		"@fastify/multipart": "^8.3.0",
 		"@nestjs/common": "^9.0.0",
 		"@nestjs/config": "^3.2.3",
 		"@nestjs/core": "^9.0.0",
