--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@nestjs/platform-express": "^9.0.0",
 		"@nestjs/platform-fastify": "^9.4.3",
 		"@supabase/supabase-js": "^2.44.4",
+		"nodemailer": "^6.9.14",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.2.0",
 		"xlsx": "^0.18.5"
